[project]
name = "jissue"
version = "0.1.0"
description = "AI-powered Jira issue creator with MCP integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "jira>=3.8.0",
    "pydantic>=2.0.0",
]

[project.scripts]
jissue = "jissue.cli:main"
jissue-server = "jissue.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["jissue*"]
